# my_burn_app

./: Cargo.toml
src/: main.rs  model.rs
