[package]
name = "my_burn_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.10.0", features = ["wgpu", "train"] }
burn-autodiff = "0.10.0"
burn-dataset = "0.10.0"
burn-train = "0.10.0"
serde = "1.0.190"
